--- a/publication.html
+++ b/publication.html
@@ -106,7 +106,7 @@ International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance
 <ul>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
 Machine Learning Journal (<b>MLJ</b>), 2014. <br />
-<b>Tam Le</b>, Marco Cuturi.
+<b>Tam Le</b>, Marco Cuturi. <br />
 (<i>Preliminary conference version in ACML, 2013</i>)
 </p>
 </li>
@@ -180,7 +180,8 @@ Asian Conference on Machine Learning (<i>ACML</i>), 2013 (oral). (<i>Oral paper 
 <ul>
 <li><p><a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
 Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <br />
-<b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto
+<b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto <br />
+(<i>Preliminary conference version in ICIAR, 2011</i>)
 </p>
 </li>
 </ul>
@@ -298,7 +299,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-22 21:51:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-22 21:53:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
