--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>23-Jan-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
+</p>
+</li>
 <li><p>20-Jan-2024, Our paper, entitled <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport for Measures with Noisy Tree Metric&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a>! This is joint work with Truyen Nguyen and Kenji Fukumizu.  
 </p>
 </li>
@@ -175,7 +178,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-22 21:53:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-23 16:03:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
