--- a/professional.html
+++ b/professional.html
@@ -24,6 +24,9 @@
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
 </p>
 <ul>
+<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): 2024
+</p>
+</li>
 <li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2024
 </p>
 </li>
@@ -254,7 +257,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-22 21:53:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-23 16:03:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
