--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <ul>
 <li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). </p>
 </li>
-<li><p>04/2023 - 03/2025, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Information Co., Ltd grant. </p>
+<li><p>04/2023 - 03/2025, a collaborator in a group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. </p>
 </li>
 <li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.</p>
 </li>
@@ -137,7 +137,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-05 14:17:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-05 15:09:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
