--- a/publication.html
+++ b/publication.html
@@ -101,6 +101,12 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Other Journals / Conference papers / Preprints</b></p>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2402.04516.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a> .  <br /> 
+ArXiv, 2024. <br /> 
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2401.15889.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a> .  <br /> 
 ArXiv, 2024. <br /> 
 Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.</p>
@@ -110,12 +116,6 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.</p>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a> .  <br /> 
 Under review, 2024. <br /> 
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a> .  <br /> 
-Under review, 2024. <br /> 
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.</p>
 </li>
 </ul>
 <ul>
@@ -260,7 +260,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-05 15:09:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-08 11:06:03 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
