--- a/publication.html
+++ b/publication.html
@@ -200,7 +200,9 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 <h2>Workshop Posters / Talks</h2>
 <p><b>Workshop Posters</b></p>
 <ul>
-<li><p>2023, <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning (OTML)</a>, US.</p>
+<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric</font>, <a href="https://sites.google.com/view/dl2024/" target=&ldquo;blank&rdquo;>Deep Learning: Theory, Applications, and Implications workshop</a>, Japan. (<i>to present on March 18-20</i>)</p>
+</li>
+<li><p>2023, <a href="https://openreview.net/pdf?id=Puw2kj7Wc7" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning (OTML)</a>, US.</p>
 </li>
 <li><p>2023, <a href="https://www.dropbox.com/scl/fi/7m1exga71quydzjv9xtuk/TamLe_2023_Posters_ISM-Open-House.pdf?rlkey=mtvwyfl6ltootzvod43acgxr7&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures on a Graph</font></a>, ISM Open House, Virtual.</p>
 </li>
@@ -223,6 +225,8 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Invited Talks</b></p>
 <ul>
+<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric </font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid). (<i>to present on February 15</i>)</p>
+</li>
 <li><p>2024, <font color="blue">Local Structures for Large-Scale Optimal Transport</font>, <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2023, <font color="blue">Sobolev Transport</font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Tokyo, Japan. [<a href="https://www.dropbox.com/scl/fi/5sgdtnm2zcul63gjwd9ks/TamLe_2023Aug_TransformativeA_DS_25min.pdf?rlkey=8y9ececp48mqokp0kzwkw8b2s&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
@@ -260,7 +264,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-08 11:20:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-08 11:30:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
