--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
+</p>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2401.15889" target=&ldquo;blank&rdquo;>Sliced Wasserstein with Random-Path Projecting Directions</a>, joint work with Khai Nguyen, Shujian Zhang, and Nhat Ho.
+</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2402.04516" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, and Kenji Fukumizu.
+</p>
+</li></ul>
+</li>
 <li><p>23-Jan-2024, I will serve as Area Chair for <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
 </p>
 </li>
@@ -112,7 +122,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-02 17:28:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-02 12:50:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
