--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,20 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2401.15889.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>  <br /> 
+International Conference on Machine Learning (<b>ICML</b>), 2024. (<i>Acceptance rate: 2609/9473</i>) <br />
+Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2402.04516.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
+International Conference on Machine Learning (<b>ICML</b>), 2024. (<i>Acceptance rate: 2609/9473</i>) <br />
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2024. (<i>Acceptance rate: 546/1980</i>) <br /> 
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
@@ -114,20 +128,6 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Other Journals / Conference papers / Preprints</b>
 </p>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2402.04516.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
-ArXiv, 2024. <br /> 
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2401.15889.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>  <br /> 
-ArXiv, 2024. <br /> 
-Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
-</p>
-</li>
-</ul>
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
 Under review, 2024. <br /> 
@@ -326,7 +326,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-02 17:28:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-02 12:50:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
