--- a/professional.html
+++ b/professional.html
@@ -24,13 +24,13 @@
 <p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
 </p>
 <ul>
-<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): 2024
+<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>
 </p>
 </li>
-<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2024
+<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>
 </p>
 </li>
-<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): 2024
+<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>
 </p>
 </li>
 <li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024
@@ -229,7 +229,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-02 12:50:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-08 05:59:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
