--- a/professional.html
+++ b/professional.html
@@ -46,10 +46,10 @@
 <p><b>Program Committee / Journal Reviewer</b>
 </p>
 <ul>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2023
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2023
 </p>
 </li>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2023
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2024
 </p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2023
@@ -101,10 +101,10 @@
 </ul>
 <h2>Visitors / ISM Joint-Research</h2>
 <ul>
-<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023)
+<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023).
 </p>
 </li>
-<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> FY2023
+<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> (FY2023&ndash;FY2024).
 </p>
 </li>
 </ul>
@@ -229,7 +229,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-08 05:59:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-23 16:25:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
