--- a/publication.html
+++ b/publication.html
@@ -20,7 +20,7 @@
 <div id="toptitle">
 <h1>Tam Le - Publications</h1>
 </div>
-<p>(<font color="red">*</font>: equal contribution)
+<p>(<font color="red">*</font>: equal contribution; <font color="purple">**</font>: co-last author)
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
@@ -136,6 +136,13 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 </li>
 </ul>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance on a System of Lines</font></a>  <br /> 
+Under review, 2024. <br /> 
+Hoang Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="purple">**</font>, Tan Nguyen<font color="purple">**</font>.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2311.00927.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Counterfactual Distribution Estimation in Multivariate Causal Models</font></a> <br />
 Conference on Causal Learning and Reasoning (<i>CLeaR</i>), 2024. <br />
 Thong Pham, Shohei Shimizu, Hideitsu Hino, <b>Tam Le</b>.
@@ -232,7 +239,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Workshop Posters</b>
 </p>
 <ul>
-<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric</font>, <a href="https://sites.google.com/view/dl2024/" target=&ldquo;blank&rdquo;>Deep Learning: Theory, Applications, and Implications workshop</a>, Japan. (<i>to present on March 18-20</i>)
+<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric</font>, <a href="https://sites.google.com/view/dl2024/" target=&ldquo;blank&rdquo;>Deep Learning: Theory, Applications, and Implications workshop</a>, Japan.
 </p>
 </li>
 <li><p>2023, <a href="https://openreview.net/pdf?id=Puw2kj7Wc7" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning (OTML)</a>, US.
@@ -269,7 +276,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Invited Talks</b>
 </p>
 <ul>
-<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric </font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid). (<i>to present on February 15</i>)
+<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric </font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid).
 </p>
 </li>
 <li><p>2024, <font color="blue">Local Structures for Large-Scale Optimal Transport</font>, <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
@@ -326,7 +333,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-08 05:59:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-23 16:25:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
