--- a/code.html
+++ b/code.html
@@ -21,6 +21,48 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/Generalized-Sobolev-Transport" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport (GST)</a>. (ICML 2024)
+</p>
+<ul>
+<li><p>A scalable variant of Orlicz-Wasserstein (OW) for probability measures supported on a graph metric space (i.e., several-order faster than OW for computation, which paves a way to apply OW for practical applications).
+</p>
+</li>
+<li><p>Decoupling the Sobolev Transport (AISTATS 2022) with the Lp geometric structure and leveraging Orlicz geometry to propose the GST.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+
+<ul>
+<li>
+<ul>
+<li><p>(i) closed-form expression for fast computation; (ii) negative definite metric which allows to build positive definite kernels.
+</p>
+</li>
+<li><p>Note: Tree Wasserstein (NeurIPS 2019) is a special case of ST (when input measures are supported in a tree metric space).
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p><a href="https://github.com/lttam/Random-Path-SW" target=&ldquo;blank&rdquo;>Random-Path Sliced-Wasserstein</a>. (ICML 2024)
+</p>
+<ul>
+<li><p>An efficient variant of sliced-Wasserstein (SW) by leveraging random-path projection directions.
+</p>
+</li>
+<li><p>Implemented by Khai Nguyen.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><a href="https://github.com/lttam/RobustOT-NoisyTreeMetric" target=&ldquo;blank&rdquo;>Scalable Robust Optimal Transport</a>. (AISTATS 2024)
 </p>
 <ul>
@@ -226,7 +268,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-23 16:25:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-29 23:01:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
