--- a/code.html
+++ b/code.html
@@ -27,21 +27,7 @@
 <li><p>A scalable variant of Orlicz-Wasserstein (OW) for probability measures supported on a graph metric space (i.e., several-order faster than OW for computation, which paves a way to apply OW for practical applications).
 </p>
 </li>
-<li><p>Decoupling the Sobolev Transport (AISTATS 2022) with the Lp geometric structure and leveraging Orlicz geometry to propose the GST.
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
-
-<ul>
-<li>
-<ul>
-<li><p>(i) closed-form expression for fast computation; (ii) negative definite metric which allows to build positive definite kernels.
-</p>
-</li>
-<li><p>Note: Tree Wasserstein (NeurIPS 2019) is a special case of ST (when input measures are supported in a tree metric space).
+<li><p>Decoupling the Sobolev Transport (AISTATS 2022) with the Lp geometric structure, and leveraging Orlicz geometry to derive the GST.
 </p>
 </li>
 </ul>
@@ -268,7 +254,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-29 23:01:41 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-29 23:32:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
