--- a/publication.html
+++ b/publication.html
@@ -130,7 +130,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 </p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
-Under review, 2024. <br /> 
+ArXiv, 2024. <br /> 
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
 </p>
 </li>
@@ -333,7 +333,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-05 17:36:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-05 17:37:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
