--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>07-Aug-2023, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
+</p>
+</li>
+<li><p>03-Aug-2023, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;>AAAI&rsquo;25</a>.
+</p>
+</li>
 <li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
 </p>
 <ul>
@@ -119,7 +125,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-05 18:22:28 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-08-12 00:11:29 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
