--- a/code.html
+++ b/code.html
@@ -254,7 +254,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-12 00:11:29 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-08-29 10:59:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
