--- a/professional.html
+++ b/professional.html
@@ -33,6 +33,9 @@
 <li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>
 </p>
 </li>
+<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025
+</p>
+</li>
 <li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024
 </p>
 </li>
@@ -61,13 +64,13 @@
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020-2021, 2023
 </p>
 </li>
-<li><p>Discrete and Computational Geometry Journal (DCG): 2021 
-</p>
-</li>
 <li><p>Machine Learning Journal (MLJ): 2017-2019
 </p>
 </li>
 <li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021-2022
+</p>
+</li>
+<li><p>Discrete and Computational Geometry Journal (DCG): 2021 
 </p>
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020
@@ -165,7 +168,7 @@
 <p><b>Conferences</b>
 </p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2023.
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2024.
 </p>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2023.
@@ -229,7 +232,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-12 00:11:29 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-08-29 10:59:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
